<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_header">

        <EditTextPreference
            app:key="homeScreenText"
            app:title="@string/home_screen_text"
            app:defaultValue="@string/home_instructions_default"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="swHomeScreenBackground"
            android:title="Enable home screen image" />

        <Preference
            android:title="Home screen image"
            android:key="filePicker" />

        <EditTextPreference
            app:key="enterNameText"
            app:title="@string/enter_name_text"
            app:defaultValue="@string/name_instructions_default"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="swEnableInstructions"
            android:title="Enable instructions screen" />

        <EditTextPreference
            app:key="recordInstructionsText"
            app:title="@string/record_instructions_text"
            android:defaultValue="@string/record_instructions_default"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>



</PreferenceScreen>